Fixes
Centered the fullHeight DIV. Hide the scrollbar. Added scripts/code.js for the back-to-top button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,17 @@ h5 {
   overflow: hidden;
 }
 
-.fullHeight { /* Was "container" */
-  /* Force this to the full height of the browser window.
-     Or use position: absolute; height: 100%; */
-  height: 100vh;
+/* Place the entire page in one wide centered column */
+.fullHeight {
+  /* Center this within the div.noScroll */
+  margin: 0 auto;
 
   /* Limit the overall page width */
   max-width: 1265px;
+
+  /* Force this to the full height of the browser window.
+     Or use position: absolute; height: 100%; */
+  height: 100vh;
 
   /* Stack header/middle/footer vertically */
   display: flex;
@@ -56,6 +60,15 @@ h5 {
   /* From https://moduscreate.com/blog/how-to-fix-overflow-issues-in-css-flex-layouts/,
      may be needed for other browsers. */
   min-height: 0px;
+
+  /* For IE and Firefox: hide scrollbar. See https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
+  -ms-overflow-style: none; // IE 10+
+  scrollbar-width: none;    // Firefox
+}
+
+/* For Chrome and Safari: hide scrollbar */
+.middle::-webkit-scrollbar { 
+    display: none;
 }
 
 /* This will take the height it needs for the social icons & Credits */
@@ -135,22 +148,19 @@ h5 {
   clear: both;
 }
 
-/* Back to Top arrow*/
+/* Back to Top arrow */
 .back-to-top {
-  position: fixed;
-  bottom: 30px;
-  right: 5%;
-  color: black;
+  float: right;
+  display: none;
+  /* color: black;
   line-height: 30px;
-  text-align: center;
-  text-decoration: none;
   width: 32px;
   height: 32px;
+  text-align: center;
+  text-decoration: none;
   border: 0;
   border-radius: 50%;
-  /*display: none;*/
-  cursor: pointer;
-  z-index: 1000;
+  cursor: pointer; */
 }
 
 .back-to-top:hover {
